--- a/environment.yml
+++ b/environment.yml
@@ -99,8 +99,9 @@ dependencies:
   - pip:
     - einops==0.3.0
     - future==0.18.2
-    - performer-pytorch==0.2.0
+    - performer-pytorch==0.3.0
     - python-graphviz==0.14.2
     - pytorch-fast-transformers==0.3.0
+    - tokenizers==0.9.3
     - torchviz==0.0.1
 prefix: C:\ProgramData\Anaconda3\envs\pytorch_env
