--- a/environment.yml
+++ b/environment.yml
@@ -10,7 +10,7 @@ dependencies:
   - blas=1.0=mkl
   - bleach=3.2.1=py_0
   - ca-certificates=2020.10.14=0
-  - certifi=2020.6.20=py38_0
+  - certifi=2020.6.20=pyhd3eb1b0_3
   - cffi=1.14.3=py38h7a1dbc1_0
   - colorama=0.4.3=py_0
   - cudatoolkit=10.2.89=h74a9793_1
@@ -19,6 +19,7 @@ dependencies:
   - entrypoints=0.3=py38_0
   - freetype=2.10.2=hd328e21_0
   - graphviz=2.38=hfd603c8_2
+  - icc_rt=2019.0.0=h0cc432a_1
   - importlib-metadata=1.7.0=py38_0
   - importlib_metadata=1.7.0=0
   - intel-openmp=2020.2=254
@@ -27,6 +28,7 @@ dependencies:
   - ipython_genutils=0.2.0=py38_0
   - jedi=0.17.2=py38_0
   - jinja2=2.11.2=py_0
+  - joblib=0.17.0=py_0
   - jpeg=9b=hb83a4c4_2
   - jsonschema=3.2.0=py38_0
   - jupyter_client=6.1.6=py_0
@@ -74,12 +76,15 @@ dependencies:
   - pywin32=227=py38he774522_1
   - pywinpty=0.5.7=py38_0
   - pyzmq=19.0.2=py38ha925a31_1
+  - scikit-learn=0.23.2=py38h47e9c7a_0
+  - scipy=1.5.0=py38h9439919_0
   - send2trash=1.5.0=py38_0
   - setuptools=49.6.0=py38_0
   - six=1.15.0=py_0
   - sqlite=3.33.0=h2a8f88b_0
   - terminado=0.8.3=py38_0
   - testpath=0.4.4=py_0
+  - threadpoolctl=2.1.0=pyh5ca1d4c_0
   - tk=8.6.10=he774522_0
   - torchvision=0.7.0=py38_cu102
   - tornado=6.0.4=py38he774522_1
@@ -99,7 +104,7 @@ dependencies:
   - pip:
     - einops==0.3.0
     - future==0.18.2
-    - performer-pytorch==0.3.0
+    - performer-pytorch==0.5.0
     - python-graphviz==0.14.2
     - pytorch-fast-transformers==0.3.0
     - tokenizers==0.9.3
