--- a/environment.yml
+++ b/environment.yml
@@ -105,13 +105,10 @@ dependencies:
     - axial-positional-embedding==0.2.1
     - einops==0.3.0
     - future==0.18.2
-    - local-attention==1.0.2
-    - performer-pytorch==0.5.1
+    - local-attention==1.1.1
+    - performer-pytorch==0.7.4
     - product-key-memory==0.1.10
-    - python-graphviz==0.14.2
     - pytorch-fast-transformers==0.3.0
-    - reformer-pytorch==1.2.0
-    - tokenizers==0.9.3
-    - torchviz==0.0.1
-    - tqdm==4.51.0
-prefix: C:\ProgramData\Anaconda3\envs\pytorch_env
+    - reformer-pytorch==1.2.2
+prefix: C:\Users\cupof\anaconda3\envs\pytorch_env
+
