--- a/environment.yml
+++ b/environment.yml
@@ -36,6 +36,7 @@ dependencies:
   - libpng=1.6.37=h2a8f88b_0
   - libsodium=1.0.18=h62dcd97_0
   - libtiff=4.1.0=h56a325e_1
+  - libuv=1.40.0=he774522_0
   - lz4-c=1.9.2=h62dcd97_1
   - m2w64-gcc-libgfortran=5.3.0=6
   - m2w64-gcc-libs=5.3.0=7
@@ -72,7 +73,7 @@ dependencies:
   - pyrsistent=0.17.3=py38he774522_0
   - python=3.8.5=h5fd99cc_1
   - python-dateutil=2.8.1=py_0
-  - pytorch=1.6.0=py3.8_cuda102_cudnn7_0
+  - pytorch=1.7.0=py3.8_cuda102_cudnn7_0
   - pywin32=227=py38he774522_1
   - pywinpty=0.5.7=py38_0
   - pyzmq=19.0.2=py38ha925a31_1
@@ -86,9 +87,11 @@ dependencies:
   - testpath=0.4.4=py_0
   - threadpoolctl=2.1.0=pyh5ca1d4c_0
   - tk=8.6.10=he774522_0
-  - torchvision=0.7.0=py38_cu102
+  - torchaudio=0.7.0=py38
+  - torchvision=0.8.1=py38_cu102
   - tornado=6.0.4=py38he774522_1
   - traitlets=5.0.4=py_0
+  - typing_extensions=3.7.4.3=py_0
   - vc=14.1=h0510ff6_4
   - vs2015_runtime=14.16.27012=hf0eaf9b_3
   - wcwidth=0.2.5=py_0
@@ -108,7 +111,8 @@ dependencies:
     - local-attention==1.1.1
     - performer-pytorch==0.7.4
     - product-key-memory==0.1.10
-    - pytorch-fast-transformers==0.3.0
-    - reformer-pytorch==1.2.2
+    - python-graphviz==0.14.2
+    - tokenizers==0.9.3
+    - torchviz==0.0.1
 prefix: C:\Users\cupof\anaconda3\envs\pytorch_env
 
