--- a/environment.yml
+++ b/environment.yml
@@ -6,12 +6,13 @@ channels:
   - defaults
 dependencies:
   - argon2-cffi=20.1.0=py38he774522_1
+  - atomicwrites=1.4.0=py_0
   - attrs=20.2.0=py_0
   - backcall=0.2.0=py_0
   - blas=1.0=mkl
   - bleach=3.2.1=py_0
-  - ca-certificates=2020.10.14=0
-  - certifi=2020.6.20=pyhd3eb1b0_3
+  - ca-certificates=2020.12.8=haa95532_0
+  - certifi=2020.12.5=py38haa95532_0
   - cffi=1.14.3=py38h7a1dbc1_0
   - colorama=0.4.3=py_0
   - cudatoolkit=11.0.221=h74a9793_0
@@ -23,6 +24,7 @@ dependencies:
   - icc_rt=2019.0.0=h0cc432a_1
   - importlib-metadata=1.7.0=py38_0
   - importlib_metadata=1.7.0=0
+  - iniconfig=1.1.1=py_0
   - intel-openmp=2020.2=254
   - ipykernel=5.3.4=py38h5ca1d4c_0
   - ipython=7.18.1=py38h5ca1d4c_0
@@ -50,6 +52,7 @@ dependencies:
   - mkl-service=2.3.0=py38hb782905_0
   - mkl_fft=1.2.0=py38h45dec08_0
   - mkl_random=1.1.1=py38h47e9c7a_0
+  - more-itertools=8.6.0=pyhd3eb1b0_0
   - msys2-conda-epoch=20160418=1
   - nbconvert=5.6.1=py38_0
   - nbformat=5.0.7=py_0
@@ -57,8 +60,9 @@ dependencies:
   - notebook=6.1.1=py38_0
   - numpy=1.19.1=py38h5510c5b_0
   - numpy-base=1.19.1=py38ha3acd2a_0
+  - nvidia-apex=0.1=py38hbf67121_3
   - olefile=0.46=py_0
-  - openssl=1.1.1h=he774522_0
+  - openssl=1.1.1i=h2bbff1b_0
   - packaging=20.4=py_0
   - pandoc=2.10.1=0
   - pandocfilters=1.4.2=py38_1
@@ -66,14 +70,18 @@ dependencies:
   - pickleshare=0.7.5=py38_1000
   - pillow=7.2.0=py38hcc1f983_0
   - pip=20.2.2=py38_0
+  - pluggy=0.13.1=py38_0
   - prometheus_client=0.8.0=py_0
   - prompt-toolkit=3.0.7=py_0
+  - py=1.10.0=pyhd3eb1b0_0
   - pycparser=2.20=py_2
   - pygments=2.7.1=py_0
   - pyparsing=2.4.7=py_0
   - pyrsistent=0.17.3=py38he774522_0
+  - pytest=6.2.1=py38haa95532_0
   - python=3.8.5=h5fd99cc_1
   - python-dateutil=2.8.1=py_0
+  - python_abi=3.8=1_cp38
   - pytorch=1.7.0=py3.8_cuda110_cudnn8_0
   - pywin32=227=py38he774522_1
   - pywinpty=0.5.7=py38_0
@@ -88,9 +96,11 @@ dependencies:
   - testpath=0.4.4=py_0
   - threadpoolctl=2.1.0=pyh5ca1d4c_0
   - tk=8.6.10=he774522_0
+  - toml=0.10.1=py_0
   - torchaudio=0.7.0=py38
   - torchvision=0.8.1=py38_cu110
   - tornado=6.0.4=py38he774522_1
+  - tqdm=4.55.1=pyhd3eb1b0_0
   - traitlets=5.0.4=py_0
   - typing_extensions=3.7.4.3=py_0
   - vc=14.1=h0510ff6_4
@@ -101,21 +111,25 @@ dependencies:
   - wincertstore=0.2=py38_0
   - winpty=0.4.3=4
   - xz=5.2.5=h62dcd97_0
+  - yaml=0.2.5=he774522_0
   - zeromq=4.3.2=ha925a31_3
   - zipp=3.1.0=py_0
   - zlib=1.2.11=h62dcd97_4
   - zstd=1.4.5=h04227a9_0
   - pip:
     - axial-positional-embedding==0.2.1
+    - click==7.1.2
     - dataclasses==0.6
     - einops==0.3.0
     - future==0.18.2
+    - itsdangerous==1.1.0
     - local-attention==1.1.1
-    - performer-pytorch==0.10.0
+    - performer-pytorch==0.14.9
     - product-key-memory==0.1.10
     - python-graphviz==0.14.2
     - pytorch-fast-transformers==0.3.0
     - pyyaml==5.3.1
     - tokenizers==0.9.3
     - torchviz==0.0.1
+    - werkzeug==1.0.1
 prefix: C:\Users\cupof\anaconda3\envs\pytorch_env
